<resources>
    <string name="app_name">ShoppingList</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>

    <string name="item_name_with_argument">Item name: %1$s</string>
    <string name="price_with_argument">Price: %1$s ft</string>
    <string name="description_with_argument">Description: %1$s</string>
    <string name="category_with_argument">Category: %1$s</string>
    <string name="bought_with_argument">Bought: %1$s</string>

    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="bought">Bought</string>
    <string name="category">Category:</string>

    <string name="activity_title">CARTi: Shopping List</string>
    <string name="new_item">New Item</string>
    <string name="delete_all">Delete All</string>
    <string name="item_description">Item Description</string>
    <string name="ok">Ok</string>
    <string name="not_implementing_literal">The Activity is not implementing the ShoppingItemHandler interface.</string>
    <string name="edit_item">Edit Item</string>
    <string name="cancel">Cancel</string>
    <string name="field_empty">This field cannot be empty</string>
    <string name="new_shopping_item">New Shopping Item</string>
    <string name="click_to_add">Click here to add new items</string>
    <string name="item_created">Item created</string>
    <string name="undo">Undo</string>
</resources>