<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:hint="@string/item_name"/>

    <EditText
        android:id="@+id/etPrice"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:hint="@string/price"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:hint="@string/description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/matte_black"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingVertical="10dp"
            android:text="@string/category"/>

        <Spinner
            android:id="@+id/spinnerCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="20dp"
            android:paddingVertical="10dp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbBought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bought"
        android:textSize="16sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"/>

</LinearLayout>